force-app/main/default/objects/DM_Fulfillment__c/DM_Fulfillment__c.object-meta.xml
<CustomObject>
    <label>Fulfillment</label>
    <nameField>
        <displayFormat>FT-{0000}</displayFormat>
        <label>Fulfillment #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fulfillment</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>