force-app/main/default/objects/DM_Fulfillment__c/fields/DM_Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>DM_Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Shipments_Sent</relationshipName>
    <type>Lookup</type>
</CustomField>