force-app/main/default/objects/DM_Fulfillment__c/fields/DM_Sale__c.field-meta.xml
<CustomField>
    <fullName>DM_Sale__c</fullName>
    <label>Sale #</label>
    <referenceTo>DM_Sale__c</referenceTo>
    <relationshipName>Shipments_Sent</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>