force-app/main/default/objects/DM_Fulfillment__c/fields/DM_Shipment_Address__c.field-meta.xml
<CustomField>
    <fullName>DM_Shipment_Address__c</fullName>
    <label>Shipment Address</label>
    <type>Address</type>
</CustomField>