force-app/main/default/objects/DM_Fulfillment__c/fields/DM_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>DM_Shipment_Date__c</fullName>
    <label>Shipment Date</label>
    <type>Date</type>
</CustomField>