force-app/main/default/objects/DM_Fulfillment__c/recordTypes/DM_Shipment_Sent.recordType-meta.xml
<RecordType>
    <fullName>DM_Shipment_Sent</fullName>
    <active>true</active>
    <label>Shipment Sent</label>
</RecordType>